2004-01-30  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el: Changes to follow anchors that point Shimbun articles.
	(w3m-goto-article-function): New variable.
	(w3m-safe-view-this-url): Refer the above.

	* shimbun/nnshimbun.el: Add autoloads of `gnus-group-short-name'
	and `gnus-summary-refer-article' to avoid byte-compile warnings.
	(nnshimbun-search-xref, nnshimbun-goto-url,
	nnshimbun-setup-article-mode): New functions.

2004-01-29  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-follow-cache-control-header): New option.
	(w3m-w3m-dump-extra): If `w3m-follow-cache-control-header' is
	nil, do not follow the chache control headers.

2004-01-28  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* Makefile.in (tarball): Because Emacs-22 has not been released,
	remove w3m-e22.el from the creating tarball.

2004-01-27  Taichi KAWABATA  <batta@beige.ocn.ne.jp>

	* w3m-e22.el: New file.  This file is simply the copy of
	w3m-e21.el except that the ccl section has been removed.

	* w3m.el: Require w3m-e22 when Emacs 22 is running.

2004-01-26  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-after-cursor-move-hook): Add :group keyword.
	(w3m-auto-show): Check `truncate-lines' before scrolling.
	(w3m-check-current-position): Do not check `truncate-lines'.

	* mime-w3m.el: Changes to display URI of the current anchor.
	(mime-w3m-after-cursor-move-hook): New option.
	(mime-w3m-add-local-hook): New advice.
	(mime-w3m-check-current-position): New funcion.

2004-01-24  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-proc.el (w3m-process-start-and-wait): Abolished.
	(w3m-process-with-wait-handler): Reimplemented.

	* w3m.el (w3m-input-url): Accept other symbols than `popup'.
	(w3m-copy-buffer): Fix the bug that drops an asynchronous handler
	returned by `w3m-goto-url'.

2004-01-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-goto-url): Register a url to the history even if it
	is failed to retrieve.  Suggested by Fujishima-san.
