@@ -150,7 +150,7 @@
 
 (defconst emacs-w3m-version
   (eval-when-compile
-    (let ((rev "$Revision: 1.991 $"))
+    (let ((rev "$Revision: 1.992 $"))
       (and (string-match "\\.\\([0-9]+\\) \\$\\'" rev)
 	   (setq rev (- (string-to-number (match-string 1 rev)) 968))
 	   (concat "1.3.80" (if (> rev 0) (format ".%d" rev) "")))))
@@ -8075,7 +8075,9 @@ passed to the `w3m-quit' function (which see)."
 
 ;;; w3m-minor-mode
 (defvar w3m-goto-article-function nil
-  "Function to visit an article pointed by a given URL.")
+  "Function to visit an article pointed by a given URL.
+A function set to this variable must accept an URL, and must return
+non-nil when an article pointed by the URL is found.")
 
 (defun w3m-safe-view-this-url ()
   "View the URL of the link under point.
@@ -8093,9 +8095,9 @@ mind that there may be pages which cause security problems."
   (let ((w3m-pop-up-windows nil)
 	(url (w3m-url-valid (w3m-anchor))))
     (cond
-     (url (if (fboundp w3m-goto-article-function)
-	      (funcall w3m-goto-article-function url)
-	    (w3m-goto-url url)))
+     (url (or (when (fboundp w3m-goto-article-function)
+		(funcall w3m-goto-article-function url))
+	      (w3m-goto-url url)))
      ((w3m-url-valid (w3m-image))
       (if (w3m-display-graphic-p)
 	  (w3m-toggle-inline-image)
